[package]
name = "mkfs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mkfs-naive"
path = "src/naive.rs"

[dependencies]
naive_fs = { path = "../crates/naive_fs" }
sleeplock = { path = "../crates/sleeplock" }
tokio = { version = "1", default-features = false, features = [
    "fs",
    "rt",
    "macros",
    "io-util",
] }
spin = { version = "0.9", default-features = false, features = [
    "lock_api",
    "mutex",
    "spin_mutex",
    "rwlock",
] }
clap = "3.0.0-beta.4"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
env_logger = "0.8"
glob = "0.3"
