[package]
name = "executor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fifo"]
fifo = ["crossbeam-queue"]

[dependencies]
crossbeam-queue = { version="0.3", optional=true, default-features=false, features=["alloc"] }
lock_api = { version="0.4", features=["nightly"] }
