[package]
name = "mm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = { version="0.4", features=["nightly"] }
# [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.6"
debug = { path = "../debug" }

[dev-dependencies]
