[package]
name = "naive_fs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = { version="0.4", features=["nightly"] }
sleeplock = { path="../sleeplock" }
bitmap = { path="../bitmap" }
futures-util = { version="0.3", default-features=false, features=["alloc"] }
bitflags = "1.2"
pin-project = "1"
future_ext = { path="../future_ext" }

[dev-dependencies]
tokio-test = "0.4"
spin = { version="0.9", default-features=false, features=[
    "lock_api",
    "mutex",
    "spin_mutex",
    "rwlock",
] }
