[package]
name = "sleeplock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = { version="0.4", features=["nightly"] }
crossbeam-queue = { version="0.3", default-features=false, features=["alloc"] }
